--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --env.production true",
     "module": "webpack --env.production true --env.module true",
     "standalone": "webpack --env.production true --env.module true --env.standalone true",
-    "start": "webpack-dev-server --open"
+    "start": "concurrently \"node server.js\" webpack-dev-server --open"
   },
   "keywords": [
     "webix",
@@ -34,6 +34,18 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.2.8",
     "webix-jet": "^1.6.1"
   }
 }
